side navbar now resizes and wraps correctly when window resizes small

--- a/public/css/test.css
+++ b/public/css/test.css
@@ -1,14 +1,29 @@
 @media (max-width: 900px) {
   #main-header {
-    order: 1;
     height: 100px;
     flex: 0 1 100%;
     margin-bottom: 75px;
   }
+  .icon-vertical-nav {
+    display: flex;
+    padding: 1px 5px 1px 5px;
+    width: 20%;
+    margin: 2px;
 
-  .bar {
+    justify-content: center;
+  }
+  #main-nav {
+    height: 50px;
+    flex: 0 1 100%;
+    display: flex;
+    flex-flow: row;
+    background: #92AF8F;
+    padding: 10px;
+  }
+  .horizontal-bar {
     flex-wrap: wrap;
   }
+
   .icon-header {
     order: 0 !important;
     padding: 1px 5px 1px 5px;
@@ -22,7 +37,7 @@
   .search {
     margin-top: 10px;
     order: 2 !important;
-    width: 100%;
+    flex: 0 1 100%;
   }
 }
 
@@ -36,12 +51,51 @@ body {
 *, *:before, *:after {
   box-sizing: inherit;
 }
-a {
+a, span {
   text-decoration: none;
   color: white;
   letter-spacing: 1px;
 }
-.bar {
+
+.store-card {
+  width: 200px;
+  height: 200px;
+  background: #92AF8F;
+  padding: 10px;
+  margin: 5px;
+}
+#recent-stores-header {
+  margin-left: 20px;
+
+}
+#stores-list {
+  display: flex;
+  flex-flow: row wrap;
+  flex: 0 1 70%;
+  margin-left: 10px;
+}
+
+#orders-list {
+  display: flex;
+  flex-direction: column;
+  flex: 0 1 30%;
+  background: #92AF8F;
+  padding-left: 10px;
+  margin-bottom: 5px;
+  justify-content: space-around;
+
+}
+.order-list {
+  align-self: flex-start;
+  width: 90%;
+  display: flex;
+  color: white;
+  background: #006341;
+  padding: 10px;
+}
+.order {
+}
+.horizontal-bar {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -51,12 +105,31 @@ a {
   padding: 10px;
   text-align: center;
 }
+#main-nav {
+  order: 2;
+  margin-right: 2px;
+}
+.vertical-bar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  flex: 0 1 10%;
+  background: #92AF8F;
+  padding: 10px;
+  text-align: center;
+}
 .icon-header {
   padding: 5px 35px 5px 35px;
   /*border: 3px solid black;*/
   background-color: #006341;
 }
-
+.icon-vertical-nav {
+  width: 100%;
+  padding: 5px 35px 5px 35px;
+  background-color: #006341;
+  margin-bottom: 5px;
+}
 .icon-footer {
   width: 48%;
   padding: 5px 35px 5px 35px;
@@ -134,12 +207,6 @@ a {
   flex: 0 1 100%;
 }
 
-#main-nav {
-  order: 2;
-  display: flex;
-  flex-direction: column;
-  flex: 0 1 10%;
-}
 
 #main-main {
   order: 3;
@@ -151,19 +218,6 @@ a {
 #home-page {
   display: flex;
   flex-direction: row;
-}
-
-#stores-list {
-  display: flex;
-  flex-flow: column;
-  flex: 0 1 80%;
-
-}
-
-#orders-list {
-  display: flex;
-  flex-direction: column;
-  flex: 0 1 20%;
 }
 
 #main-footer {
